[package]
name = "vow"
version = "0.1.1"
edition = "2021"
license = "MIT"
repository = "https://github.com/George-Miao/vow"
description = "Serde <--> File made easy"
keywords = ["compio", "file", "io", "serde", "tokio"]
categories = ["filesystem"]

[dependencies]
cfg-if = "1.0.0"
thiserror = "1.0.64"
mod_use = "0.2.1"
serde = "1.0.210"

compio-io = { version = "0.4.1", optional = true }
compio-fs = { version = "0.5.1", optional = true }
compio-driver = { version = "0.5.0", optional = true, default-feaures = false }
tokio = { version = "1.40.0", optional = true, default-features = false, features = ["fs", "io-util"] }
serde_json = { version = "1.0.128", optional = true }

[features]
default = ["format-json"]
# Wether futures should be send. Depend on the runtime, this may be required or not.
send = []
# Enable support for compio backend. Caution: compio and send features cannot be enabled at the same time.
backend-compio = ["dep:compio-driver", "dep:compio-fs", "dep:compio-io"]
# Enable support for tokio backend
backend-tokio = ["dep:tokio", "send"]
# Enable support for json format
format-json = ["dep:serde_json"]

[dev-dependencies]
compio = { version = "0.12.0", features = ["io-uring", "macros"] }
serde = { version = "1.0.210", features = ["derive"] }
tokio = { version = "1.40.0", features = ["macros", "rt"] }
